# archive-aaf-sshsm

./: .gitmodules  .gitreview  INFO.yaml  README.md  build.sh  groups  project.config  reviewers.config
Adapter/: README
SoftHSMv2/: .gitignore  .gitignore.bak  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  softhsm2.module
SoftHSMv2/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
SoftHSMv2/src/: Makefile  Makefile.in
SoftHSMv2/src/lib/: Makefile  Makefile.am  Makefile.in  P11Attributes.cpp  P11Attributes.h  P11Objects.cpp  SoftHSM.cpp  SoftHSM.h
SoftHSMv2/src/lib/.deps/: P11Attributes.Plo  P11Objects.Plo  SoftHSM.Plo  access.Plo  main.Plo
SoftHSMv2/src/lib/HwInfra/: HwInfra.c  HwInfra.cpp  HwInfra.h  Makefile.am  README  hwpluginif.h  tags
SoftHSMv2/src/lib/common/: Makefile.in
SoftHSMv2/src/lib/crypto/: Makefile.in
SoftHSMv2/src/lib/crypto/test/: Makefile.in
SoftHSMv2/src/lib/data_mgr/: Makefile.in
SoftHSMv2/src/lib/data_mgr/test/: Makefile.in
SoftHSMv2/src/lib/handle_mgr/: Makefile.in
SoftHSMv2/src/lib/handle_mgr/test/: Makefile.in
SoftHSMv2/src/lib/object_store/: DBObject.cpp  Makefile.in  OSAttributes.h
SoftHSMv2/src/lib/object_store/test/: Makefile.in
SoftHSMv2/src/lib/session_mgr/: Makefile.in  Session.cpp  Session.h
SoftHSMv2/src/lib/session_mgr/test/: Makefile.in
SoftHSMv2/src/lib/slot_mgr/: Makefile.in
SoftHSMv2/src/lib/slot_mgr/test/: Makefile.in
SoftHSMv2/src/lib/test/: Makefile  Makefile.am  Makefile.in
SoftHSMv2/testing/appveyor/: appveyor_build.bat  appveyor_download_requirements.ps1
TPM2-Plugin/: .gitignore  Makefile  Makefile.am  Makefile.in  README  README.md  bootstrap  config.h  config.status  configure  configure.ac  libtool  tags
TPM2-Plugin/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
TPM2-Plugin/lib/: Makefile  Makefile.am  Makefile.in  libtpm2-plugin.la  plugin_api.h  plugin_register.c  plugin_register.h  tcti_util.h  tpm2_plugin_api.c  tpm2_plugin_api.h  tpm2_plugin_api.lo  tpm2_plugin_init.c  tpm2_plugin_init.lo  tpm2_util.c  tpm2_util.h
TPM2-Plugin/lib/.deps/: tpm2_plugin_api.Plo  tpm2_plugin_init.Plo
TPM2-Plugin/lib/.libs/: libtpm2-plugin.la  libtpm2-plugin.lai  libtpm2-plugin.so.1  libtpm2-plugin.so.1.0.0
TPM2-Plugin/lib/include/: hwpluginif.h  plugin_api.h  plugin_register.h  tpm2_plugin_api.h
TPM2-Plugin/src/: Makefile  Makefile.am  Makefile.in  main.c
TPM2-Plugin/test/: Makefile  main.c  tpm2_plugin
TPM2-Plugin/test/.deps/: main.Po
TPM2-Plugin/test/.libs/: tpm2_plugin
TPM2-Plugin/test/lib/: libtpm2-plugin.la
test/func/: README.txt  setup.sh  teardown.sh  test.sh  testaafimport.sh  testcasign.sh
test/func/data/distcenter/: passphrase
test/integration/samplecaservicecontainer/applicationfiles/: CaSign.java  CaSignMultiThread.java  README  privkey.pem  test.csr
test/integration/samplecaservicecontainer/duplicatetoolfiles/: dupPriv  dupSymseed
test/integration/samplecaservicecontainer/importtoolfiles/: outPriv
test/integration/samplecaservicecontainer/scripts/: test.sh
test/integration/samplecaservicecontainer/test/: multiprocesstest.sh
test/integration/samplesharevolume/: README  ca.cert  ca.der  dupEncKey  dupPriv  dupPub  dupSymseed  flag.yaml  privatekey.der  privkey.pem  privkey.pem.gpg  slotinfo.txt  srkhandle.txt
test/stresstest/multiprocess/: CaSignMultiprocess.java  README  entrypoint.sh  multiprocessapplication.sh  multiprocessdockerfile  multiprocessimport.sh  softhsmconfig.sh
test/stresstest2/multithreading/: CaSignMultiThread.java  README  multithreaddockerfile
test/unit/: README.txt  setup.sh  teardown.sh  test.sh  testaafimport.sh  testcasign.sh
test/unit/data/abrmd/cred/: kpass  srk_handle
test/unit/data/caservice/: ipass.txt.gpg  sopin.txt.gpg  upin.txt.gpg
test/unit/data/caservice/local/: org.osaaf.aaf.cm.pkcs11  org.osaaf.cm.ca.props
testing/Integration/samplecaservicecontainer/applicationfiles/: CaSign.java  install.sh  test.key
tpm-tools/: INSTALL  LICENSE  README
tpm-tools/duplicate/: util.c
tpm-tools/duplicate/include/: marshal.h  util.h
tpm-tools/initandverify/: Init_and_create_tpm_primary.sh  Sign_Verify_test.sh  private.pem
tpm-util/: INSTALL
tpm-util/duplicate/: Makefile.am  configure.ac  crypto_aux.c  main.c  marshal.c  sampleMakefile  tpm_duplication_aux.c  util.c
tpm-util/duplicate/include/: crypto_aux.h  marshal.h  tpm_duplication_aux.h  util.h
tpm-util/import/: main.c  sampleMakefile  tpm_wrapper.c  util.c
tpm-util/import/include/: tpm_wrapper.h  util.h
tpm-util/initandverify/: Duplicate.sh  ImportTpmKey.sh  public.pem
