AC_INIT([tpm-util-duplicate], [1.0])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
#Version info for the library
VERSION_INFO="1:0:0"
AC_SUBST(VERSION_INFO)


AM_PROG_AR
LT_INIT
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile ])
AC_OUTPUT
